added main menu state and buttons

--- a/game.vcxproj
+++ b/game.vcxproj
@@ -140,17 +140,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="gui.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainMenuState.cpp" />
     <ClCompile Include="State.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="gui.h" />
+    <ClInclude Include="MainMenuState.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="State.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="gamestate_keybinds.ini" />
     <None Include="graphics.ini" />
     <None Include="supported_keys.ini" />
   </ItemGroup>
